--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -18,8 +18,18 @@
 <body>
 	<div class="container">
 		<header class="d-flex flex-wrap justify-content-center py-4 mb-5 border-bottom">
-			Здесь размещаем контакты, график и т.д. по схеме в кореловском файле строка из 6 блоков
+			<div>
+				Здесь размещаем контакты, график и т.д. по схеме в кореловском файле строка из 6 блоков
+			</div>
+			<br>
+
 		</header>
+		<div>
+			узкая длинная картинка
+		</div>
+		<div>
+			Приветственный текст
+		</div>
 	</div>
 
 	<div class="container">
@@ -58,8 +68,13 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
+	</div>
+
+	<div class="container ">
+
+		<div> контакты</div>
+		<div> подвал </div>
 	</div>
 </body>
 
