--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -38,9 +38,9 @@
 			<!-- карточка вида заказа -->
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top" alt="...">
+					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top" style="height: 100px; width: 300px;" alt="...">
 					<div class="card-body">
-						<h3 class="card-title">Изготовление печатей и штампов</h3>
+						<h3 class="card-title">Печатей и штамп</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже</p>
 						<a href="#" class="btn btn-primary px-5">Печати</a>
 					</div>
@@ -49,7 +49,7 @@
 
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top" alt="...">
+					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top" style="height: 100px; width: 300px;" alt="...">
 					<div class="card-body">
 						<h3 class="card-title">Полиграфия</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -60,7 +60,7 @@
 
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top" alt="...">
+					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top" style="height: 100px; width: 300px;" alt="...">
 					<div class="card-body">
 						<h3 class="card-title">Широкоформатная печать</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже</p>
@@ -70,12 +70,30 @@
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<div class="row pt-3">
+			<div class="col-12 d-flex justify-content-center">
+				<h1>POLY</h1>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="poly_text col-12 d-flex justify-content-center">
+				<h3>Описание материалы и т.д.</h3>
+			</div>
+			<div class="poly_text col-12 d-flex justify-content-center">
+				таблица сюда контекстом из базы данных инфу
+			</div>
+		</div>
+	</div>
 
-	<div class="container ">
+
+	<!-- <div class="container ">
 
 		<div> контакты</div>
 		<div> подвал </div>
-	</div>
+	</div> -->
 </body>
 
 </html>
