--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -30,7 +30,24 @@
 		<div>
 			Приветственный текст
 		</div>
+	</div><br><br>
+
+	<div class="container">
+	<h5 style="color: red;">Вывод информации из модели</h5>
+	<br>
+	card
+	<div> {% for item in cards %}
+		<p>{{item }}</p>
+		{% endfor %}
 	</div>
+<br>
+leaf
+<div> {% for item in leaf %}
+	<p>{{item }}</p>
+	{% endfor %}
+</div>
+</div>
+<br><br>
 
 	<div class="container">
 		<div class="row row-cols-1 row-cols-md-3">
