--- a/tipkor/tipkor/static/tipkor/css/tipkor.css
+++ b/tipkor/tipkor/static/tipkor/css/tipkor.css
@@ -1,75 +1,31 @@
-p {
-    font-size: 15px;
-}
-
-h1 {
-    color: #0d6efd;
+.img_mess {
+        display: flex;
+        justify-content: center;
 
 }
 
-.explain {
-    font-size: 10px;
-    color: grey;
+#hi_mess {
+    height: 10px;
+    width: 10px;
+    background: green;
 }
 
-.btn:hover {
-    background: #063856;
-    color: azure;
+
+
+#header_img {
+    height: 80px;
+    width: auto;
+    background: green;
 }
 
-.my_photo {
-    width: 350px;
-    height: 350px;
+#slogan {
+    text-align: center;
+    color: rebeccapurple;
 }
-
-.projects_img {
-    width: 350px;
-    height: 350px;
-}
-
-.icon-dwn img {
-    height: 32px;
-    width: 32px;
-}
-
-.git_svg {
-    height: 32px;
-    width: 32px;
-}
-
-.card {
-    border-width: 2px;
-    border-color: #0d6efd;
-}
-
-.carousel-caption {
-    color: black;
-}
-
-.carousel-control-prev {
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 80px;
-}
-
-.carousel-control-next {
-    background-color: rgb(0, 0, 0, 0.6);
-    width: 80px;
-}
-
-.carousel-caption h3 {
-    background-color: rgb(255, 255, 255);
-    color: #0d6efd;
-}
-
-.carousel-caption p {
-    background-color: rgb(255, 255, 255);
-}
-
 
 @media screen and (max-width: 992px) {
-    .resume_block {
-        display: flex;
-        flex-direction: column-reverse;
+    .hi_grafic {
+        display: none;
     }
 
     .text {
