--- a/tipkor/tipkor/static/tipkor/css/tipkor.css
+++ b/tipkor/tipkor/static/tipkor/css/tipkor.css
@@ -1,16 +1,14 @@
 .img_mess {
         display: flex;
         justify-content: center;
-
+        align-items: center;
 }
 
 #hi_mess {
-    height: 10px;
-    width: 10px;
+    height: 30px;
+    width: 30px;
     background: green;
 }
-
-
 
 #header_img {
     height: 80px;
@@ -18,10 +16,16 @@
     background: green;
 }
 
+.top_buttons {
+    /* height: 60px; */
+}
+
 #slogan {
     text-align: center;
     color: rebeccapurple;
 }
+
+
 
 @media screen and (max-width: 992px) {
     .hi_grafic {
