--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -17,26 +17,35 @@
 
 <body>
 	<div class="container pt-2">
-		<div class="row d-flex justify-content-center">
+		<div class="row d-flex justify-content-center align-items-center">
 			<div class="main_logo col d-flex justify-content-center border">logo</div>
 			<div class="hi_telefon col border" style="text-align: center; font-size: large;">8 (964) 571-65-51</div>
 			<div class="hi_grafic col border">пн-пт 10:00-18:00</div>
 			<div class="hi_watssap col-md-2 border">
 				<div class="img_mess">
 					<img id="hi_mess" src="" alt="">
-					<a style="font-size: small;">whatssap</a>
+					<a style="font-size: large;">whatssap</a>
 				</div>
 			</div>
 			<div class="hi_teleg col-md-2 border">
 				<div class="img_mess">
 					<img id="hi_mess" src="" alt="">
-					<a style="font-size: small;">telegram</a>
+					<a style="font-size: large;">telegram</a>
 				</div>
 			</div>
 		</div>
-
 	</div>
 
+	<!-- навигация кнопками сюда, обычные кнопки, пока на якори в странице -->
+	<div class="container pt-2">
+		<div class="row">
+			<div class="btn-group btn-group-lg top_buttons" role="group" aria-label="Простой пример">
+				<button type="button" class="btn btn-primary border">Левая</button>
+				<button type="button" class="btn btn-primary border">Средняя</button>
+				<button type="button" class="btn btn-primary border">Правая</button>
+			</div>
+		</div>
+	</div>
 
 	<div class="hi_imgage container p-3">
 		<div class="row">
@@ -44,15 +53,15 @@
 		</div>
 	</div>
 
-
 	<div class="container p-3">
-		<div class="row">
+		<div class="row border">
 			<h1 id="slogan">Офсетная печать, широкоформатка, печати штампы</h1>
 		</div>
 	</div>
 	</div><br><br>
 
-	<div class="container">
+
+	<div class="container border">
 		<h5 style="color: red;">Вывод информации из модели</h5>
 		<br>
 		card
@@ -76,8 +85,9 @@
 			<!-- карточка вида заказа -->
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top"
-						style="height: 100px; width: 300px;" alt="...">
+					<div class="ratio ratio-21x9">
+						<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+					</div>
 					<div class="card-body">
 						<h3 class="card-title">Печатей и штамп</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже</p>
@@ -88,8 +98,7 @@
 
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top"
-						style="height: 100px; width: 300px;" alt="...">
+					<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
 					<div class="card-body">
 						<h3 class="card-title">Полиграфия</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже.</p>
@@ -100,8 +109,7 @@
 
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.jpg' %}" class="card-img-top"
-						style="height: 100px; width: 300px;" alt="...">
+					<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
 					<div class="card-body">
 						<h3 class="card-title">Широкоформатная печать</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже</p>
@@ -130,11 +138,31 @@
 	</div>
 
 
-	<!-- <div class="container ">
+	<div class="container">
+		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+			<div class="col-md-4 d-flex align-items-center">
+				<a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+					<svg class="bi" width="30" height="24">
+						<use xlink:href="#bootstrap" />
+					</svg>
+				</a>
+				<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 Company, Inc</span>
+			</div>
 
-		<div> контакты</div>
-		<div> подвал </div>
-	</div> -->
+			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+
+				<li class="ms-3"><a class="text-body-secondary" href="http://ya.ru">
+						<img id="hi_mess" src="" alt=""></a></li>
+
+				<li class="ms-3"><a class="text-body-secondary" href="http://ya.ru">
+						<img id="hi_mess" src="" alt=""></a></li>
+
+				<li class="ms-3"><a class="text-body-secondary" href="http://ya.ru">
+						<img id="hi_mess" src="" alt=""></a></li>
+
+			</ul>
+		</footer>
+	</div>
 </body>
 
 </html>
