--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -46,10 +46,10 @@
 	<!-- навигация кнопками сюда, обычные кнопки, пока на якори в странице -->
 	<div class="container pt-2">
 		<div class="row">
-			<div class="btn-group btn-group-lg top_buttons" role="group" aria-label="Простой пример">
-				<button type="button" class="btn btn-primary border fs-2">Полиграфия</button>
-				<button type="button" class="btn btn-primary border fs-2">Наружка</button>
-				<button type="button" class="btn btn-primary border fs-2">Печати</button>
+			<div class="top_buttons d-flex justify-content-center border" role="group" aria-label="Простой пример">
+				<button type="button" class="btn btn-primary btn-lg col-4 m-1">Полиграфия</button>
+				<button type="button" class="btn btn-primary btn-lg col-4 m-1">Наружка</button>
+				<button type="button" class="btn btn-primary btn-lg col-4 m-1">Печати</button>
 			</div>
 		</div>
 	</div>
