--- a/tipkor/tipkor/static/tipkor/css/tipkor.css
+++ b/tipkor/tipkor/static/tipkor/css/tipkor.css
@@ -44,9 +44,10 @@
         display: flex;
         flex-direction: column;
     }
-    .resume_block {
-        display: flex;
-        flex-direction: column-reverse;
+    .top_buttons {
+        /* display: flex; */
+        flex-direction:column;
+        /* align-content: stretch; */
     }
     
     .text {
