--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -47,9 +47,9 @@
 	<div class="container pt-2">
 		<div class="row">
 			<div class="top_buttons d-flex justify-content-center border" role="group" aria-label="Простой пример">
-				<button type="button" class="btn btn-primary btn-lg col-4 m-1">Полиграфия</button>
-				<button type="button" class="btn btn-primary btn-lg col-4 m-1">Наружка</button>
-				<button type="button" class="btn btn-primary btn-lg col-4 m-1">Печати</button>
+				<button type="button" class="btn btn-primary flex-fill btn-lg  m-1">Полиграфия</button>
+				<button type="button" class="btn btn-primary flex-fill btn-lg  m-1">Широкоформатная печать</button>
+				<button type="button" class="btn btn-primary flex-fill btn-lg  m-1">Печати</button>
 			</div>
 		</div>
 	</div>
