--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -11,22 +11,23 @@
 	<link rel="icon" href="{% static 'tipkor/img/favicon.ico' %}" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'tipkor/css/tipkor.css' %}">
+	<script src="{% static 'tipkor/js/bootstrap.bundle.min.js' %}"></script>
 	<script src="{% static 'tipkor/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'tipkor/js/tipkor.js' %}"></script>
 </head>
 
 <body>
 	<div class="container pt-2">
-		<div class="row d-flex justify-content-center align-items-center">
+		<div class="top_line row d-flex justify-content-center align-items-center">
 			<div class="main_logo col d-flex justify-content-center border">
 				<img src="{% static '/tipkor/img/logo.gif' %}" alt="">
 			</div>
-			<div class="hi_telefon col border" style="text-align: center;">
-				<p class="fs-2">8 (964) 571-65-51</p>
+			<div class="hi_telefon col border ">
+				<p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p>
 			</div>
-			<div class="hi_grafic col border">
-				<p class="fs-4">пн-пт 10:00-18:00</p>
-				
+			<div class="hi_grafic col border" style="text-align: center;">
+				<p class="fs-4  mb-0">пн-пт 10:00-18:00</p>
+
 			</div>
 			<div class="hi_watssap col-md-2 border">
 				<div class="img_mess">
@@ -46,10 +47,12 @@
 	<!-- навигация кнопками сюда, обычные кнопки, пока на якори в странице -->
 	<div class="container pt-2">
 		<div class="row">
-			<div class="top_buttons d-flex justify-content-center border" role="group" aria-label="Простой пример">
-				<button type="button" class="btn btn-primary flex-fill btn-lg  m-1">Полиграфия</button>
-				<button type="button" class="btn btn-primary flex-fill btn-lg  m-1">Широкоформатная печать</button>
-				<button type="button" class="btn btn-primary flex-fill btn-lg  m-1">Печати</button>
+			<div class="top_buttons d-flex justify-content-center border">
+
+
+				<a class="btn btn-primary flex-fill btn-lg  m-1" href="#poly">Полиграфия</a>
+				<a class="btn btn-primary flex-fill btn-lg  m-1" href="#shiro">Широкоформатная печать</a>
+				<a class="btn btn-primary flex-fill btn-lg  m-1" href="#stamp">Печати</a>
 			</div>
 		</div>
 	</div>
@@ -68,44 +71,18 @@
 	</div><br><br>
 
 
-	<div class="container border">
-		<h5 style="color: red;">Вывод информации из модели</h5>
-		<br>
-		card
-		<div> {% for item in cards %}
-			<p>{{item }}</p>
-			{% endfor %}
-		</div>-
-		-
-		<br>
-		leaf
-		<div> {% for item in leaf %}
-			<p>{{item }}</p>
-			{% endfor %}
-		</div>
-	</div>
 	<br><br>
-
 	<div class="container">
 		<div class="row row-cols-1 row-cols-md-3">
 
 			<!-- карточка вида заказа -->
 			<div class="card_block p-3">
 				<div class="card p-2 border">
-					<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
-					<div class="card-body">
-						<h3 class="card-title">Печатей и штамп</h3>
-						<p class="card-text">По кнопке якорь на прайс ниже</p>
-						<a href="#" class="btn btn-primary px-5">Печати</a>
-					</div>
-				</div>
-			</div>
-
-			<div class="card_block p-3">
-				<div class="card p-2 border">
+					<a name="poly"></a>
 					<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
 					<div class="card-body">
 						<h3 class="card-title">Полиграфия</h3>
+
 						<p class="card-text">По кнопке якорь на прайс ниже.</p>
 						<a href="#" class="btn btn-primary px-5">Полиграфия</a>
 					</div>
@@ -114,9 +91,26 @@
 
 			<div class="card_block p-3">
 				<div class="card p-2 border">
+					<a name="stamp"></a>
+
+					<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
+					<div class="card-body">
+						<h3 class="card-title">Печатей и штамп</h3>
+
+						<p class="card-text">По кнопке якорь на прайс ниже</p>
+						<a href="#" class="btn btn-primary px-5">Печати</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="card_block p-3">
+				<div class="card p-2 border">
+					<a name="shiro"></a>
+
 					<img src="{% static '/tipkor/img/order_cost.gif' %}" class="icard-img-top img-fluid" alt="...">
 					<div class="card-body">
 						<h3 class="card-title">Широкоформатная печать</h3>
+
 						<p class="card-text">По кнопке якорь на прайс ниже</p>
 						<a href="#" class="btn btn-primary px-5">Сольвент</a>
 					</div>
@@ -124,6 +118,11 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+
 	<div class="container">
 		<div class="row pt-3">
 			<div class="col-12 d-flex justify-content-center">
@@ -143,6 +142,26 @@
 	</div>
 
 
+	<div class="container border">
+		<h5 style="color: red;">Вывод информации из модели</h5>
+		<br>
+		card
+		<div> {% for item in cards %}
+			<p>{{item }}</p>
+			{% endfor %}
+		</div>-
+		-
+		<br>
+		leaf
+		<div> {% for item in leaf %}
+			<p>{{item }}</p>
+			{% endfor %}
+		</div>
+	</div>
+
+
+
+	<!-- FOOTER -->
 	<div class="container">
 		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 			<div class="col-md-4 d-flex align-items-center">
