--- a/tipkor/tipkor/templates/tipkor/old_index.html
+++ b/tipkor/tipkor/templates/tipkor/old_index.html
@@ -53,6 +53,21 @@
 				<a class="btn btn-primary flex-fill btn-lg  m-1" href="#poly">Полиграфия</a>
 				<a class="btn btn-primary flex-fill btn-lg  m-1" href="#shiro">Широкоформатная печать</a>
 				<a class="btn btn-primary flex-fill btn-lg  m-1" href="#stamp">Печати</a>
+
+				<div class="dropdown d-flex flex-fill">
+					<a class="btn btn-primary flex-fill btn-lg  m-1 dropdown-toggle" href="#poly" role="button" id="dropdownMenuLink"
+						data-bs-toggle="dropdown" aria-expanded="false">
+						Ссылка выпадающего списка
+					</a>
+
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="#poly">Действие</a></li>
+						<li><a class="dropdown-item" href="#">Другое действие</a></li>
+						<li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
+					</ul>
+				</div>
+
+
 			</div>
 		</div>
 	</div>
