add urls for poly, + tmp for poly,

--- a/tipkor/tipkor/templates/tipkor/index.html
+++ b/tipkor/tipkor/templates/tipkor/index.html
@@ -131,7 +131,7 @@
 					<div class="card-body">
 						<h3 class="card-title">Визитки</h3>
 						<p class="card-text">По кнопке якорь на прайс ниже.</p>
-						<a href="#" class="btn btn-primary px-5">Расчет визиток</a>
+						<a href="/poly/card" class="btn btn-primary px-5">Расчет визиток</a>
 					</div>
 				</div>
 			</div>
