conf templates in poly

--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -8,17 +8,10 @@
     <h5 style="color: red;">Вывод информации из модели</h5>
     <br>
     card
-    <div> {% for item in cards %}
+    <div> {% for item in card %}
         <p>{{item }}</p>
         {% endfor %}
     </div>-
-    -
-    <br>
-    leaf
-    <div> {% for item in leaf %}
-        <p>{{item }}</p>
-        {% endfor %}
-    </div>
-</div>
+
 
 {% endblock %}
