--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -6,16 +6,18 @@
 
 <div class="container border">
     <h5 style="color: red;">Вывод информации из модели</h5>
+    {{ result }}
+
     <br>
     card
-    <div> {% for item in card %}
+    <!-- <div> {% for item in card %}
         <p>{{item }}</p>
         {% endfor %}
-    </div>-
+    </div>- -->
     form
     <form action="{% url 'poly:card' %}" method="get">
         {% csrf_token %}
-        {{ card_form }}
+        {{ form }}
         <button type="submit" class="btn btn-primary" value="card_form">Расчет</button>
         <a href="{% url 'poly:card' %}" class="btn btn-danger">Сброс</a>
     </form>
