--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -5,16 +5,10 @@
 {% block content %}
 
 <div class="container border">
-    <h5 style="color: red;">Вывод информации из модели</h5>
-    <h1>{{ result }}</h1>
-
     <br>
-    card
-    <!-- <div> {% for item in card %}
-        <p>{{item }}</p>
-        {% endfor %}
-    </div>- -->
-    form
+    Форма расчета заказа визиток: размер - неактивен, тираж меняется по 500шт, дуплекс как есть
+    <br>
+    <br>
     <form action="{% url 'poly:card' %}" method="post">
         {% csrf_token %}
         {{ form }}
@@ -22,5 +16,9 @@
         <a href="{% url 'poly:card' %}" class="btn btn-danger">Сброс</a>
     </form>
 
+    <br><br>
 
-{% endblock %}
+    <h1 style="color: red;">{{ result }}</h1>
+
+
+    {% endblock %}
