--- a/tipkor/tipkor/static/tipkor/css/tipkor.css
+++ b/tipkor/tipkor/static/tipkor/css/tipkor.css
@@ -42,6 +42,15 @@
   }
 
 
+.size {
+    width: auto;
+}
+
+.pressrun {
+    display: flex;
+    justify-content: end;
+}
+
 @media screen and (max-width: 992px) {
     .hi_grafic {
         display: none;
