--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -9,25 +9,26 @@
     Форма расчета заказа визиток: размер - неактивен, тираж меняется по 500шт, дуплекс как есть
     <br>
     <br>
-    <form class="form-control form-control-lg" action="{% url 'poly:card' %}" method="post">
-        {% csrf_token %}
-        <div class="size row d-flex justify-content-center align-items-center">
-            <div class="col-3 p-2 border">ширина(мм): {{ form.x }}</div>
-            <div class="col-3 p-2 border">высота(мм): {{ form.y }}</div>
-        </div>
-        <div class="press_and_duplex row d-flex justify-content-center align-items-center">
-            <div class="col-3 p-2 border ">4+4 (4+0): {{ form.duplex }}</div>
-            <div class="col-3 p-2 border">тираж(шт): {{ form.pressrun }}</div>
-        </div>
+        <form class="form-control form-control-lg" action="{% url 'poly:card' %}" method="post">
+            {% csrf_token %}
+            <div class="size border row d-flex justify-content-center align-items-center">
+                <div class="col-3 p-2 border">ширина(мм): {{ form.x }}</div>
+                <div class="col-3 p-2 border">высота(мм): {{ form.y }}</div>
+            </div>
+            <div class="press_and_duplex border row d-flex justify-content-center align-items-center">
+                <div class="col-3 p-2 border ">4+4 (4+0): {{ form.duplex }}</div>
+                <div class="col-3 p-2 border">тираж(шт): {{ form.pressrun }}</div>
+            </div>
 
-        <div class="press_and_duplex row d-flex justify-content-center align-items-center pt-3">
+            <div class="buttons row d-flex justify-content-center align-items-center pt-3">
 
-            <button type="submit" class="btn btn-primary col-3" value="card_form">Расчет</button>
-            <a href="{% url 'poly:card' %}" class="btn btn-danger  col-3">Сброс</a>
-        </div>
-        <div class="container border pt-3">
-            <h1 style="color: red;">Цена тиража: {{ result }}</h1>
-        </div>
+                <button type="submit" class="btn btn-primary col-3 p-2" value="card_form">Расчет</button>
+                <a href="{% url 'poly:card' %}" class="btn btn-danger p-2 col-3">Сброс</a>
+            </div>
+            <div class="container border pt-3">
+                <h1 style="color: red;">Цена тиража: {{ result }}</h1>
+            </div>
+    </div>
 </div>
 
 </form>
